--- a/Esbic/app/src/main/res/layout/call_main.xml
+++ b/Esbic/app/src/main/res/layout/call_main.xml
@@ -113,7 +113,7 @@
                     <TextView
                         android:id="@+id/tel_number"
                         android:textSize="25sp"
-                        android:gravity="center|left"
+                        android:gravity="center"
                         android:layout_gravity="center"
                         android:layout_width="@dimen/width260"
                         android:layout_height="@dimen/width75"
