--- a/Esbic/app/src/main/res/layout/message_content_item.xml
+++ b/Esbic/app/src/main/res/layout/message_content_item.xml
@@ -29,7 +29,7 @@
             <TextView
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:id="@+id/item_content"
+                android:id="@+id/item_title"
                 android:textSize="@dimen/width25"
                 android:layout_width="@dimen/width200"
                 android:layout_height="@dimen/width65"
@@ -37,6 +37,7 @@
             <TextView
                 android:layout_gravity="center"
                 android:gravity="center"
+                android:id="@+id/item_date"
                 android:layout_width="@dimen/width200"
                 android:layout_height="@dimen/width65"
                 android:textSize="@dimen/width25"
