--- a/Esbic/app/src/main/res/layout/main_activity.xml
+++ b/Esbic/app/src/main/res/layout/main_activity.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/width93"
         android:orientation="horizontal"
-        android:background="@drawable/message_bg"
+        android:background="@drawable/top_bg"
         >
         <Button
             android:id="@+id/message"
