--- a/Esbic/app/src/main/res/layout/project_setting.xml
+++ b/Esbic/app/src/main/res/layout/project_setting.xml
@@ -6,7 +6,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/width90"
-        android:background="@drawable/message_bg">
+        android:background="@drawable/top_bg">
         <ImageButton
             android:id="@+id/project_setting_back"
             android:layout_marginLeft="@dimen/width90"
