--- a/Esbic/app/src/main/res/values/styles.xml
+++ b/Esbic/app/src/main/res/values/styles.xml
@@ -70,6 +70,12 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="text_30_ffffff">
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:textSize">@dimen/textsize30</item>
+        <item name="android:gravity">center</item>
+    </style>
+
     <style name="text_18_ffffff">
         <item name="android:textColor">#ffffff</item>
         <item name="android:textSize">@dimen/textsize18</item>
